src/validation/tests/snapshots/rusty__validation__tests__literals_validation_tests__char_cast_validate.snap
---
source: src/validation/tests/literals_validation_tests.rs
expression: "&diagnostics"
---
error[E053]: Literal "XY" out of range (CHAR)
  ┌─ <internal>:7:13
  │
7 │             CHAR#"XY";
  │             ^^^^^^^^^ Literal "XY" out of range (CHAR)

error[E053]: Literal 'YZ' out of range (WCHAR)
  ┌─ <internal>:8:13
  │
8 │             WCHAR#'YZ';
  │             ^^^^^^^^^^ Literal 'YZ' out of range (WCHAR)
